[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]

[node name="Node" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 510.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 510.0
margin_bottom = 462.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
_sections_unfolded = [ "custom_constants" ]

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 30.0
margin_right = 480.0
margin_bottom = 432.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = true
selection_enabled = false
override_selected_font_color = false

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 466.0
margin_right = 510.0
margin_bottom = 566.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Host" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 253.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Server"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Connect" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 257.0
margin_right = 510.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Client"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 570.0
margin_right = 510.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_text = "rpc_id"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder", "Rect", "Size Flags" ]

[node name="GridContainer" type="GridContainer" parent="HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
_sections_unfolded = [ "Anchor", "Margin", "Size Flags" ]

[node name="Button" type="Button" parent="HBoxContainer/GridContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 167.0
margin_bottom = 147.0
rect_min_size = Vector2( 40, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "normal call: remote"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Button2" type="Button" parent="HBoxContainer/GridContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 171.0
margin_right = 338.0
margin_bottom = 147.0
rect_min_size = Vector2( 40, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "rpc: remote"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Button3" type="Button" parent="HBoxContainer/GridContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 342.0
margin_right = 509.0
margin_bottom = 147.0
rect_min_size = Vector2( 40, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "rpc_id: remote"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Button4" type="Button" parent="HBoxContainer/GridContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 151.0
margin_right = 167.0
margin_bottom = 298.0
rect_min_size = Vector2( 40, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "normal call: sync"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Button5" type="Button" parent="HBoxContainer/GridContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 171.0
margin_top = 151.0
margin_right = 338.0
margin_bottom = 298.0
rect_min_size = Vector2( 40, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "rpc: sync"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Button6" type="Button" parent="HBoxContainer/GridContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 342.0
margin_top = 151.0
margin_right = 509.0
margin_bottom = 298.0
rect_min_size = Vector2( 40, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "rpc_id: sync"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Button7" type="Button" parent="HBoxContainer/GridContainer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 302.0
margin_right = 167.0
margin_bottom = 449.0
rect_min_size = Vector2( 40, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "normal call: slave"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Button8" type="Button" parent="HBoxContainer/GridContainer" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 171.0
margin_top = 302.0
margin_right = 338.0
margin_bottom = 449.0
rect_min_size = Vector2( 40, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "rpc: slave"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Button9" type="Button" parent="HBoxContainer/GridContainer" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 342.0
margin_top = 302.0
margin_right = 509.0
margin_bottom = 449.0
rect_min_size = Vector2( 40, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "rpc_id: slave"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Button10" type="Button" parent="HBoxContainer/GridContainer" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 453.0
margin_right = 167.0
margin_bottom = 600.0
rect_min_size = Vector2( 40, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "normal call: master"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Button11" type="Button" parent="HBoxContainer/GridContainer" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 171.0
margin_top = 453.0
margin_right = 338.0
margin_bottom = 600.0
rect_min_size = Vector2( 40, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "rpc: master"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Button12" type="Button" parent="HBoxContainer/GridContainer" index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 342.0
margin_top = 453.0
margin_right = 509.0
margin_bottom = 600.0
rect_min_size = Vector2( 40, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "rpc_id: master"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[connection signal="button_down" from="HBoxContainer/VBoxContainer/HBoxContainer/Host" to="." method="_on_Host_button_down"]

[connection signal="button_down" from="HBoxContainer/VBoxContainer/HBoxContainer/Connect" to="." method="_on_Connect_button_down"]

[connection signal="button_down" from="HBoxContainer/GridContainer/Button" to="." method="_on_Button_button_down"]

[connection signal="button_down" from="HBoxContainer/GridContainer/Button2" to="." method="_on_Button2_button_down"]

[connection signal="button_down" from="HBoxContainer/GridContainer/Button3" to="." method="_on_Button3_button_down"]

[connection signal="button_down" from="HBoxContainer/GridContainer/Button4" to="." method="_on_Button4_button_down"]

[connection signal="button_down" from="HBoxContainer/GridContainer/Button5" to="." method="_on_Button5_button_down"]

[connection signal="button_down" from="HBoxContainer/GridContainer/Button6" to="." method="_on_Button6_button_down"]

[connection signal="button_down" from="HBoxContainer/GridContainer/Button7" to="." method="_on_Button7_button_down"]

[connection signal="button_down" from="HBoxContainer/GridContainer/Button8" to="." method="_on_Button8_button_down"]

[connection signal="button_down" from="HBoxContainer/GridContainer/Button9" to="." method="_on_Button9_button_down"]

[connection signal="button_down" from="HBoxContainer/GridContainer/Button10" to="." method="_on_Button10_button_down"]

[connection signal="button_down" from="HBoxContainer/GridContainer/Button11" to="." method="_on_Button11_button_down"]

[connection signal="button_down" from="HBoxContainer/GridContainer/Button12" to="." method="_on_Button12_button_down"]


